<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/twitter_dark"
    tools:context=".activities.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:padding="20dp"
                android:layout_marginStart="@dimen/grid_2x"
                android:layout_marginTop="@dimen/grid_3x"
                android:layout_marginEnd="@dimen/grid_2x"
                android:layout_marginBottom="@dimen/grid_2x"
                android:contentDescription="@string/robin_logo"
                android:src="@drawable/title" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:errorTextColor="@color/red_700"
                android:id="@+id/emailTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:textColorHint="#757575"
                    android:inputType="textEmailAddress">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:errorTextColor="@color/red_700"
                android:id="@+id/passwordTIL"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTIL"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:textColorHint="#757575"
                    android:inputType="textPassword">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_marginTop="10dp"
                android:layout_below="@id/passwordTIL"
                android:layout_centerHorizontal="true"
                android:text="@string/button_login"
                android:textSize="20sp"
                android:elevation="2dp"/>

            <TextView
                android:id="@+id/signupTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_2x"
                android:layout_marginTop="@dimen/grid_2x"
                android:layout_marginEnd="@dimen/grid_2x"
                android:layout_marginBottom="@dimen/grid_2x"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:text="@string/text_signup"
                android:textSize="16sp" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/loginProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/transparent_grey"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>