<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/grid_3x"
            android:layout_marginBottom="@dimen/grid_3x"
            android:gravity="center_horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profilePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/standard_corner_radius">

                <ImageView
                    android:id="@+id/profilePhotoImage"
                    android:layout_width="@dimen/standard_width"
                    android:layout_height="@dimen/standard_width"
                    android:contentDescription="@string/user_profile_picture"
                    android:src="@drawable/default_user"></ImageView>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/profilePhoto"
                android:layout_marginTop="@dimen/grid_3x"
                android:layout_marginBottom="@dimen/grid_1x"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeErrorColor="@color/red_700"
                app:errorIconTint="@color/red_700"
                app:errorTextColor="@color/red_700">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateUsernameButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/userNameTextInputLayout"
                android:layout_marginBottom="@dimen/grid_3x"
                android:backgroundTint="@color/teal_200"
                android:elevation="2dp"
                android:text="@string/button_update_username"
                app:cornerRadius="8dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/updateUsernameButton"
                android:layout_marginBottom="@dimen/grid_1x"

                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeErrorColor="@color/red_700"
                app:errorIconTint="@color/red_700"
                app:errorTextColor="@color/red_700">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateEmailButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/emailTextInputLayout"
                android:backgroundTint="@color/teal_200"
                android:elevation="2dp"
                android:text="@string/button_update_email"
                app:cornerRadius="8dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signOutButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@id/updateEmailButton"
                android:layout_marginTop="@dimen/grid_3x"
                android:elevation="2dp"
                android:text="@string/button_sign_out"
                app:cornerRadius="8dp">

            </com.google.android.material.button.MaterialButton>
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/profileProgressLayout"
        style="@style/VerticalThemeLayoutInputs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_grey"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>