<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:cardElevation="4dp"
        app:contentPadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="@dimen/standard_corner_radius">

            <ImageView
                android:layout_width="@dimen/standard_image"
                android:layout_height="@dimen/standard_image"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/user_profile_picture"
                android:src="@drawable/default_user">
            </ImageView>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:contentDescription="@string/robin_logo_at_top_of_screen"
            android:src="@drawable/logo">
        </ImageView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/search_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="60dp"
                    android:padding="20dp"
                    app:cardCornerRadius="@dimen/standard_corner_radius">
                    <EditText
                        android:id="@+id/search_et"
                        android:layout_width="@dimen/standard_width"
                        android:layout_height="@dimen/search_height"
                        android:textColorHint="@color/dark_grey"
                        android:background="@color/colorPrimary"
                        android:hint="@string/search"
                        android:paddingLeft="@dimen/grid_2x"
                        android:paddingRight="@dimen/grid_2x"
                        android:drawableEnd="@android:drawable/ic_menu_search"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:autofillHints="" />
                </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_height"
        android:layout_marginBottom="@dimen/grid_2x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tabIndicator="@null">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:icon="@drawable/selector_home" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/selector_search" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/selector_notifications" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/selector_messages" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">
    </androidx.viewpager2.widget.ViewPager2>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/red_500"
        android:elevation="6dp"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toTopOf="@id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/feather"
        android:contentDescription="@string/send_tweet">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_grey"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>